# Strategy-backtester

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backtester/: __init__.py  analytics.py  engine.py  execution.py  indicators.py  models.py  portfolio.py  signals.py  strategy_base.py
backtester/strategies/: ALBO_strategy.py  __init__.py  xyz_strategy.py
configs/strategies/ALBO/: ETH_5m_UTC_exclude_holidays.json
run_strategy/: run_ALBO_strategy.ipynb
tests/: test_ALBO_strategy.py  test_engine.py  test_execution.py
