[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategy-backtester"
version = "0.1.0"
description = "A minimal backtesting framework for crypto strategies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backtester*"]